Fixed IE8 Bug - z-index for divs in ContainerFieldset

--- a/Kwf_js/FrontendForm/FieldSet.css
+++ b/Kwf_js/FrontendForm/FieldSet.css
@@ -11,6 +11,10 @@
 
 .kwfFormContainerFieldSet fieldset {
     border: 2px groove #EEE;
+
+}
+.kwfFormContainerFieldSet fieldset .kwfField {
+    z-index: 1;
 }
 
 .kwfFormContainerFieldSet .kwfFormContainerFieldSetCollapsed div {
